--- a/.streamlit/secret.toml
+++ b/.streamlit/secret.toml
@@ -1,2 +1,3 @@
-OPENAI_API_KEY=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
+OPENAI_API_KEY="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"
 HUGGINGFACEHUB_API_TOKEN=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
+openai_api_key="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"
